--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:3Z5yg3lAZJ10p6gRvM/IOcbJhCKTExfP+SJ6ymtJP3E=
 APP_DEBUG=true
 APP_URL=http://localhost
 
